# dissertation-checker

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml
.qoder/repowiki/en/content/: API Documentation.md  Configuration Management.md  Core Architecture.md  Data Models and Schemas.md  Deployment and Operations.md  Development Guidelines.md  Document Processing Engine.md  Getting Started.md  Project Overview.md  Testing Strategy.md  Troubleshooting and FAQ.md
.qoder/repowiki/en/content/Architecture Overview/: Architecture Overview.md  Backend Architecture.md  Data Flow and Processing Pipeline.md  Frontend Architecture.md  System Design.md
.qoder/repowiki/en/meta/: repowiki-metadata.json
.qoder/repowiki/knowledge/en/: _index.yaml
backend/: pyproject.toml
backend/app/: main.py  runner.py
backend/app/api/: routes.py  schemas.py
backend/app/checkers/: base.py  captions.py  citations.py  formatting.py  spacing.py  structure.py
backend/app/core/: config.py  models.py
backend/app/parser/: docx_parser.py  structures.py
backend/tests/: conftest.py  test_captions.py  test_citations.py  test_formatting.py  test_integration.py  test_parser.py  test_spacing.py  test_structure.py
docs/: design.md  plan.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo
frontend/src/: App.css  App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: FileUpload.tsx  IssueCard.tsx  IssueList.tsx  ReportSummary.tsx
frontend/src/pages/: ReportPage.tsx  UploadPage.tsx
(+63 files in other folders)
